# impehrium

./: enums.py  main.py  models.py  pyproject.toml  request_models.py  response_models.py  seed.py  test.db  test.py
frontend/: app.vue  nuxt.config.ts  openapi.config.js  package-lock.json  package.json  tailwind.config.js  types.d.ts
frontend/assets/css/: tailwind.css
frontend/components/: AppSidebar.vue  Auth.vue  Chat.vue  FileUploadCard.vue  MarkdownComponent.vue  PageWrapper.vue
frontend/composables/: useApi.ts  useAuth.ts  useUsers.ts
frontend/layouts/: auth.vue  default.vue
frontend/middleware/: auth.global.ts
frontend/pages/homework-assistant/: index.vue
frontend/pages/login/: index.vue
frontend/pages/welcome/: index.vue
frontend/plugins/: heyapi.client.ts
frontend/src/: heyapi-client-config.ts
frontend/stores/: auth-store.ts  homework-assistant-store.ts  user-store.ts
frontend/types/: api.d.ts  nuxt.d.ts
services/: HomeworkService.py  ServerService.py  UserService.py
utils/: db.py  dependencies.py  utils.py
