[tool.poetry]
name = "impehrium"
version = "0.1.0"
description = ""
authors = ["czyber <czypka.github@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
sqlmodel = "^0.0.24"
sqlalchemy = "^2.0.40"
aiosqlite = "^0.21.0"
greenlet = "^3.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
